--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I'm a just a guy wanting to change his life around through coding and tech. This is my journey and my progress</p>
